gccida/c1/report_diagnostic
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/report_diagnostic/src/diagnostic.c:1831:26: error: unknown type name 'diagnostic_context_0'; did you mean 'diagnostic_context'?
void  report_diagnostic( diagnostic_context_0 *dc) 
                         ^~~~~~~~~~~~~~~~~~~~
                         diagnostic_context
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/report_diagnostic/src/diagnostic.h:29:35: note: 'diagnostic_context' declared here
typedef struct diagnostic_context diagnostic_context;
                                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/report_diagnostic/src/diagnostic.c:1833:1: error: unknown type name 'output_buffer_0'; did you mean 'output_buffer'?
output_buffer_0 *v3; // rdi 
^~~~~~~~~~~~~~~
output_buffer
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/report_diagnostic/src/diagnostic.h:28:30: note: 'output_buffer' declared here
typedef struct output_buffer output_buffer;
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/report_diagnostic/src/diagnostic.c:1834:1: error: unknown type name 'output_buffer_0'; did you mean 'output_buffer'?
output_buffer_0 *v4; // rax 
^~~~~~~~~~~~~~~
output_buffer
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/report_diagnostic/src/diagnostic.h:28:30: note: 'output_buffer' declared here
typedef struct output_buffer output_buffer;
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/report_diagnostic/src/diagnostic.c:1845:17: error: expected expression
v5 = *( _OWORD *)&diagnostic_buffer->state.prefix; 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/report_diagnostic/src/diagnostic.c:1845:9: error: use of undeclared identifier '_OWORD'
v5 = *( _OWORD *)&diagnostic_buffer->state.prefix; 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/report_diagnostic/src/diagnostic.c:1846:17: error: expected expression
v6 = *( _OWORD *)&diagnostic_buffer->state.indent_skip; 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/report_diagnostic/src/diagnostic.c:1846:9: error: use of undeclared identifier '_OWORD'
v6 = *( _OWORD *)&diagnostic_buffer->state.indent_skip; 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/report_diagnostic/src/diagnostic.c:1847:17: error: expected expression
v7 = *( _OWORD *)&diagnostic_buffer->state.cursor; 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/report_diagnostic/src/diagnostic.c:1847:9: error: use of undeclared identifier '_OWORD'
v7 = *( _OWORD *)&diagnostic_buffer->state.cursor; 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/report_diagnostic/src/diagnostic.c:1848:17: error: expected expression
v8 = *( _OWORD *)diagnostic_buffer->state.diagnostic_count; 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/report_diagnostic/src/diagnostic.c:1848:9: error: use of undeclared identifier '_OWORD'
v8 = *( _OWORD *)diagnostic_buffer->state.diagnostic_count; 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/report_diagnostic/src/diagnostic.c:1849:17: error: expected expression
v9 = *( _OWORD *)&diagnostic_buffer->state.diagnostic_count[4]; 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/report_diagnostic/src/diagnostic.c:1849:9: error: use of undeclared identifier '_OWORD'
v9 = *( _OWORD *)&diagnostic_buffer->state.diagnostic_count[4]; 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/report_diagnostic/src/diagnostic.c:1858:12: error: expected expression
*( _OWORD *)&diagnostic_buffer->state.diagnostic_count[4] = v9; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/report_diagnostic/src/diagnostic.c:1858:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&diagnostic_buffer->state.diagnostic_count[4] = v9; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/report_diagnostic/src/diagnostic.c:1859:12: error: expected expression
*( _OWORD *)v4->state.diagnostic_count = v8; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/report_diagnostic/src/diagnostic.c:1859:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v4->state.diagnostic_count = v8; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/report_diagnostic/src/diagnostic.c:1860:12: error: expected expression
*( _OWORD *)&v4->state.cursor = v7; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/report_diagnostic/src/diagnostic.c:1860:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v4->state.cursor = v7; 
   ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/report_diagnostic/src/obj/diagnostic.o] Error 1
